[package]
name = "emilaa-chess-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
freetype-rs = { git = "https://github.com/PistonDevelopers/freetype-rs", version = "0.33.0" }
gl = "0.14.0"
glfw = "0.53.0"
glm = "0.2.3"
ludviggl-chess = { git = "https://github.com/INDA23PlusPlus/ludviggl-chess", version = "0.1.0" }
stb_image_rust = "2.27.2"
